# battleground_construct

./: .gitattributes  .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yaml
battleground_construct/: Cargo.toml  README.md
battleground_construct/src/: construct.rs  lib.rs  main.rs  vehicle_control.rs
battleground_construct/src/components/: acceleration.rs  bounding_box.rs  camera_position.rs  camera_target.rs  cannon.rs  capturable.rs  capture_marker.rs  capture_point.rs  clock.rs  damage_dealer.rs  damage_hit.rs  damage_splash.rs  deploy.rs  destroyed.rs  differential_drive_base.rs  eternal.rs  expiry.rs  function_pose.rs  gps.rs  group.rs  gun_battery.rs  health.rs  hit_box.rs  hit_by.rs  hit_collection.rs  hit_effect.rs  hit_plane.rs  hit_sphere.rs  id_generator.rs  impact.rs  localization.rs  match_domination.rs  match_finished.rs  match_king_of_the_hill.rs  match_team_deathmatch.rs  match_time_limit.rs  mod.rs  objectives.rs  objectives_module.rs  parent.rs  (+30 more)
battleground_construct/src/config/: cli.rs  default.rs  loader.rs  mod.rs  playground.rs  reader.rs  setup.rs  specification.rs  tree_trailer.rs  wrap_up.rs
battleground_construct/src/config/matches/: test.yaml
battleground_construct/src/config/scenario/: match_2v2.yaml  match_demo.yaml  test.yaml  test_domination.yaml  test_pose_screenshot.yaml  test_team_deathmatch.yaml  test_unit_lineup.yaml  tutorial_01_driving_forward.yaml  tutorial_02_shoot.yaml  tutorial_03_driving_objective.yaml  tutorial_04_shoot_radar.yaml  tutorial_05_shoot_enemies.yaml  tutorial_06_shooting_enemy.yaml  unit_arm.yaml  unit_lineup.yaml
battleground_construct/src/control/: diff_drive_forwards_backwards.rs  dynamic_load_control.rs  idle.rs  mod.rs  radar_draw.rs  tank_swivel_shoot.rs
battleground_construct/src/display/: arm_joint.rs  arm_segment.rs  artillery_barrel.rs  artillery_body.rs  artillery_turret.rs  component_box.rs  component_box_lid.rs  debug_box.rs  debug_elements.rs  debug_hit_collection.rs  debug_lines.rs  debug_sphere.rs  deconstructor.rs  display_control_point.rs  draw_kinematic_chain_diff_drive.rs  draw_kinematic_chain_effector.rs  draw_kinematic_chain_link.rs  draw_kinematic_chain_revolute.rs  draw_kinematic_chain_tricycle.rs  draw_module.rs  fireworks.rs  flag.rs  health_bar.rs  mod.rs  particle_emitter.rs  primitives.rs  radar.rs  radar_model.rs  tank_barrel.rs  tank_body.rs  tank_bullet.rs  tank_tracks.rs  tank_turret.rs  tracks_side.rs  wheel.rs  wheeled_body.rs  wheeled_steer_beam.rs
battleground_construct/src/systems/: acceleration_velocity.rs  cannon_trigger.rs  capture.rs  clock.rs  deploy.rs  destroy.rs  display_capture_flag.rs  display_tank_tracks.rs  display_tricycle_wheels.rs  draw_kinematic_chain.rs  expiry_check.rs  function_pose.rs  gun_battery_trigger.rs  health_bar_update.rs  health_check.rs  health_tank_body.rs  kinematics_differential_drive.rs  kinematics_tricycle.rs  match_logic_domination.rs  match_logic_finished.rs  match_logic_king_of_the_hill.rs  match_logic_team_deathmatch.rs  match_logic_time_limit.rs  mod.rs  playback.rs  playback_finished.rs  playback_units.rs  process_hit_by.rs  process_impact.rs  projectile_floor.rs  projectile_hit.rs  radar_scan.rs  radio_transmission.rs  readme.md  record.rs  revolute_pose.rs  revolute_update.rs  revolute_velocity.rs  tank_hit_by.rs  team_color_body.rs  (+8 more)
battleground_construct/src/units/: arm.rs  artillery.rs  base_tricycle.rs  capturable_flag.rs  common.rs  constructor.rs  mod.rs  tank.rs
battleground_construct/src/util/: box_collision.rs  cgmath.rs  mod.rs  test_util.rs
battleground_construct/src/vehicles/: tank.rs
battleground_construct/tests/: ballistic_trajectory_test.rs  rotating_arm_velocity.rs  tank_body_velocities.rs
battleground_unit_control/: Cargo.toml
battleground_unit_control/src/: interface.rs  lib.rs  register_interface.rs  unit_control.rs  wasm_interface.rs
battleground_unit_control/src/modules/: cannon.rs  clock.rs  controller.rs  deploy.rs  differential_drive.rs  draw.rs  gps.rs  gun_battery.rs  mod.rs  objectives.rs  radar.rs  radio_receiver.rs  radio_transmitter.rs  revolute.rs  team.rs  unit.rs
battleground_unit_control/src/units/: artillery.rs  base_tricycle.rs  constructor.rs  mod.rs  tank.rs
battleground_vehicle_control/: Cargo.toml
battleground_vehicle_control/src/: lib.rs  register_interface.rs  wasm_interface.rs
battleground_viewer/: Cargo.toml  README.md  viewer.html
battleground_viewer/src/: fence_material.rs  gui.rs  lib.rs  limiter.rs  main.rs  time_provider.rs
battleground_viewer/src/construct_render/: construct_render.rs  effects.rs  instanced_entity.rs  mod.rs  render.rs  util.rs
battleground_viewer/src/construct_render/effects/: deconstructor.rs  mod.rs  particle_emitter.rs  retained_effect.rs
battleground_viewer/src/construct_render/render/: batching.rs  mesh_geometry.rs  mod.rs  primitive_geometry.rs  renderable.rs
battleground_viewer/src/shaders/: bloom_effect.frag  fence_material.frag
cgmath_util/: Cargo.toml
cgmath_util/src/: lib.rs
engine/: Cargo.toml
engine/src/: as_any.rs  lib.rs
example_driving_ai/: Cargo.toml
example_driving_ai/src/: lib.rs
example_unit_control/: Cargo.toml
implementation_module/: Cargo.toml  build_wasm.sh
implementation_module/src/: lib.rs
unit_control_arm/: Cargo.toml  README.md
unit_control_arm/src/: lib.rs
unit_control_builtin/: Cargo.toml
unit_control_builtin/src/: composite_control.rs  diff_drive_capturable.rs  diff_drive_forwards_backwards.rs  diff_drive_util.rs  dynamic_load_control.rs  idle.rs  interface_printer.rs  lib.rs  naive_shoot.rs  radio_position.rs  sequence_control.rs  tank_naive_shoot.rs  tank_swivel_shoot.rs
unit_control_example/: Cargo.toml
unit_control_example/.cargo/: config
unit_control_example/src/: lib.rs
unit_control_wasm/: Cargo.toml
unit_control_wasm/src/: lib.rs
vehicle_control_wasm/: Cargo.toml
vehicle_control_wasm/src/: lib.rs  main.rs
wasm_runner/src/: main.rs
wasmer_runner/: Cargo.toml
wasmer_runner/src/: main.rs
