[workspace]

members = [
    "engine",
    "battleground_construct",
    "battleground_viewer",
    "battleground_unit_control",
    "cgmath_util",
    "unit_control_arm",
    "unit_control_example",
    "unit_control_wasm",
    "unit_control_builtin",
]

# https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.dev]
# Enable some optimisations, but not all of it.
opt-level = 2
# Only using line numbers as debug information shaves off 10 seconds on linking the viewer.
debug = 1
