[package]
name = "battleground_construct"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"


[dependencies]
engine = { path = "../engine" }
battleground_unit_control = { path = "../battleground_unit_control", features=["register-interface"]}
unit_control_builtin = { path = "../unit_control_builtin"}
unit_control_wasm = { path = "../unit_control_wasm", optional=true}
cgmath = {version = "0.18.0", features = ["serde"]}
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
#ciborium = "0.2.0"
#postcard = "1.0.2"
bincode = "1.3.3"

# Used by the cli component, reused by the viewer.
clap = {version = "4.0.32", features=["derive"]}

[dev-dependencies]
# Randomness has no place in the actual construct game engine, but is useful for fuzz testing.
rand = "0.8.5"
rand_chacha = "0.3.1"

