[package]
name = "battleground_viewer"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"


[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
env_logger = "0.10.0"
engine = { path = "../engine" }
battleground_construct = { path = "../battleground_construct" }
#three-d = {version = "0.14.0", features=["egui-gui"]}
#three-d = {version = "0.15.0", features=["egui-gui"], path = "../../../asny-three-d" }
#three-d = {version = "0.15.0", features=["egui-gui"], git = "https://github.com/iwanders/asny-three-d", branch = "orbit-control-improvements"  }
# Instanced with alpha rendering order:
#three-d = {version = "0.15.0", features=["egui-gui"], git = "https://github.com/asny/three-d", rev = "c02af2f35ecb1a45c4aeb47e08ab51a6fb7c6130"  } # works, last working.
#three-d = {version = "0.15.0", features=["egui-gui"], git = "https://github.com/asny/three-d", rev = "a987195dcd2d8b2919535cb638ce7e5566ddb522"  } # fails
#three-d = {version = "0.15.0", features=["egui-gui"], git = "https://github.com/asny/three-d", rev = "99cb0640e70c49bbd48b09f76ecaa0707f4012c0"  } # potential fix, yes. https://github.com/asny/three-d/pull/330
three-d = {version = "0.15.0", features=["egui-gui"], git = "https://github.com/asny/three-d", rev = "822a6000762de2b6ea7bcc2d2bca104b91b37542"  } # master 
# Control position to viewport position conversion function.
#three-d = {version = "0.15.0", features=["egui-gui"], git = "https://github.com/iwanders/asny-three-d", rev = "bac3dde0475ee615d64987b82f9b7ecf35173e64"  }
rand = "0.8.5"
rand_distr = "0.4.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
log = "0.4"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
console_log = "0.2"
js-sys = "0.3.60"

[features]
unit_control_wasm = ["battleground_construct/unit_control_wasm"]


[dependencies.web-sys]
version = "0.3.4"
features = [
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Location',
  'Window',
  'Blob',
  'UrlSearchParams',
]
