[package]
name = "battleground_viewer"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"


[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
engine = { path = "../engine" }
battleground_construct = { path = "../battleground_construct" }
#three-d = {version = "0.14.0", features=["egui-gui"]}
#three-d = {version = "0.15.0", features=["egui-gui"], path = "../../../asny-three-d" }
#three-d = {version = "0.15.0", features=["egui-gui"], git = "https://github.com/iwanders/asny-three-d", branch = "orbit-control-improvements"  }
# Instanced with alpha rendering order:
#three-d = {version = "0.15.0", features=["egui-gui"], git = "https://github.com/asny/three-d", rev = "a2a083e1823c6813e349d49547744ab375f8821b"  }
# Control position to viewport position conversion function.
#three-d = {version = "0.15.0", features=["egui-gui"], git = "https://github.com/iwanders/asny-three-d", rev = "bac3dde0475ee615d64987b82f9b7ecf35173e64"  }
three-d = {version = "0.18.0", features=["egui-gui"]}
rand = "0.8.5"
rand_distr = "0.4.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
log = "0.4"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
console_log = "0.2"
js-sys = "0.3.60"

[features]
unit_control_wasm = ["battleground_construct/unit_control_wasm"]


[dependencies.web-sys]
version = "0.3.4"
features = [
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Location',
  'Window',
  'Blob',
  'UrlSearchParams',
]
