[package]
name = "example_driving_ai"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
battleground_vehicle_control = { path = "../battleground_vehicle_control" }

# This is really a bit of a hack to easily be able to reuse the controllers there for testing here.
battleground_construct = { path = "../battleground_construct" }

