[package]
name = "unit_control_arm"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
battleground_unit_control = { path = "../battleground_unit_control", features=["wasm-interface"] }

cgmath = {version = "0.18.0", features = ["serde"]}
serde = { version = "1.0", features = ["derive"] }
